# Medicine-Reminder-Bot

./: .env.example  .gitignore  Cargo.toml  LANGUAGE_FEATURE.md  LICENSE  README.md  README_zh.md  start.sh
src/: bot.rs  lib.rs  localization.rs  main.rs  medicine.rs  reminder.rs  storage.rs  test_localization.rs
tests/: medicine_tests.rs
